--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ lifecycleRuntimeKtx = "2.8.5"
 wear = "1.3.0"
 playServicesWearable = "18.2.0"
 composeCompiler = "1.5.14"
+kotlinxCoroutines = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
@@ -31,6 +32,8 @@ wear-compose-foundation = { module = "androidx.wear.compose:compose-foundation" 
 wear-compose-material = { module = "androidx.wear.compose:compose-material" }
 wear-compose-navigation = { module = "androidx.wear.compose:compose-navigation" }
 play-services-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearable" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
