--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ minSdkMobile = "26"
 jvmTarget = "17"
 composeBom = "2024.09.02"
 wearComposeBom = "1.4.0"
+wearCompose = "1.3.1"
 coreKtx = "1.13.1"
 activityCompose = "1.9.2"
 lifecycleRuntimeKtx = "2.8.5"
@@ -28,9 +29,9 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
-wear-compose-foundation = { module = "androidx.wear.compose:compose-foundation" }
-wear-compose-material = { module = "androidx.wear.compose:compose-material" }
-wear-compose-navigation = { module = "androidx.wear.compose:compose-navigation" }
+wear-compose-foundation = { module = "androidx.wear.compose:compose-foundation", version.ref = "wearCompose" }
+wear-compose-material = { module = "androidx.wear.compose:compose-material", version.ref = "wearCompose" }
+wear-compose-navigation = { module = "androidx.wear.compose:compose-navigation", version.ref = "wearCompose" }
 play-services-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "playServicesWearable" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
