--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,9 @@ jobs:
             - name: Setup Gradle
               uses: gradle/actions/setup-gradle@v3
 
+            - name: Ensure Gradle wrapper is executable
+              run: chmod +x ./gradlew
+
             - name: Build Wear debug
               run: ./gradlew :wear:assembleDebug
 
