--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 android.suppressUnsupportedCompileSdk=35
+kotlin.compiler.execution.strategy=in-process
+kotlin.colors.enabled=true
