--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,7 +29,7 @@ jobs:
 
             - name: Build Wear (debug) with verbose compiler logs
               run: >-
-                  ./gradlew :wear:sensors:compileDebugKotlin :wear:assembleDebug --stacktrace --info --no-parallel --rerun-tasks
+                  ./gradlew :wear:sensors:compileDebugKotlin :wear:assembleDebug --stacktrace --info --no-parallel --no-daemon --rerun-tasks --console=plain
 
             - name: Build Mobile debug
-              run: ./gradlew :mobile:assembleDebug
+              run: ./gradlew :mobile:assembleDebug --stacktrace --no-daemon --console=plain
