--- a/wear/sensors/src/main/AndroidManifest.xml
+++ b/wear/sensors/src/main/AndroidManifest.xml
@@ -1,6 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.pointtosky.wear.sensors">
-
-    <application android:allowBackup="false" android:supportsRtl="true" />
-</manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
