--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:required="false" />
 
     <application
+        android:name=".PointToSkyApp"
         android:allowBackup="true"
-        tools:replace="android:allowBackup"
+        tools:replace="android:allowBackup,android:name"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
