--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,10 +26,9 @@ jobs:
 
             - name: Setup Gradle
               uses: gradle/actions/setup-gradle@v3
+              with:
+                  gradle-home-cache-cleanup: true
+                  cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
-            - name: Build Wear (debug) with verbose compiler logs
-              run: >-
-                  ./gradlew :wear:sensors:compileDebugKotlin :wear:assembleDebug --stacktrace --info --no-parallel --no-daemon --rerun-tasks --console=plain
-
-            - name: Build Mobile debug
-              run: ./gradlew :mobile:assembleDebug --stacktrace --no-daemon --console=plain
+            - name: Build (verbose)
+              run: ./gradlew clean build --stacktrace --info --no-parallel
