--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,5 +30,5 @@ jobs:
                   gradle-home-cache-cleanup: true
                   cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
-            - name: Build (verbose)
-              run: ./gradlew clean build --stacktrace --info --no-parallel
+            - name: Build (verbose + scan)
+              run: ./gradlew clean build --stacktrace --info --scan --no-parallel
