--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,5 @@ kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 android.suppressUnsupportedCompileSdk=35
 kotlin.compiler.execution.strategy=in-process
 kotlin.colors.enabled=true
+gradle.termsOfService.agree=yes
+gradle.termsOfServiceUrl=https://gradle.com/terms-of-service
