--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,5 +31,13 @@ jobs:
               run: >-
                   ./gradlew :wear:sensors:compileDebugKotlin :wear:assembleDebug --stacktrace --info --no-parallel --no-daemon --rerun-tasks --console=plain
 
+            - name: Build (verbose, module-by-module)
+              run: |
+                set -e
+                ./gradlew :core:logging:compileDebugKotlin --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process
+                ./gradlew :wear:assembleDebug         --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process
+                ./gradlew :mobile:assembleDebug       --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process
+
+
             - name: Build Mobile debug
               run: ./gradlew :mobile:assembleDebug --stacktrace --no-daemon --console=plain
