--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -36,6 +36,17 @@ jobs:
           distribution: temurin
           java-version: 17
 
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install Android SDK packages
+        run: |
+          sdkmanager --install \
+            "platform-tools" \
+            "platforms;android-35" \
+            "build-tools;35.0.0"
+          yes | sdkmanager --licenses
+
       # 2) Затем Gradle + кеш (только один раз)
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
