--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,45 +19,30 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           clean: true
 
-      - name: Show HEAD and files
-        run: |
-          echo "HEAD = $(git rev-parse HEAD)"
-          echo "--- PointToSkyApp.kt matches ---"
-          git ls-files | grep -i 'PointToSkyApp\.kt' || true
-          echo "--- FLAVOR usages in wear/ ---"
-          git grep -In -- 'FLAVOR' -- wear/ || true
-          echo "--- All .kt under wear/ ---"
-          find wear -type f -name '*.kt' | sort || true
-
-      # 1) Сначала JDK
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 2) Затем Gradle + кеш (только один раз)
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+
+      - name: Install Android SDK packages
+        run: |
+          yes | sdkmanager --install "platform-tools" "platforms;android-35" "build-tools;35.0.0"
+          yes | sdkmanager --licenses
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
           gradle-home-cache-cleanup: true
           cache-read-only: ${{ github.ref != 'refs/heads/main' }}
 
-      # 3) Убедиться, что gradlew исполняемый
       - name: Ensure Gradle wrapper is executable
         run: chmod +x ./gradlew
 
-      # 4) Сборка по модулям с подробными логами (без build scan)
-      - name: Build (verbose, module-by-module)
+      - name: Build debug artifacts
         run: |
           set -e
-          ./gradlew :core:logging:compileDebugKotlin --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process
-          ./gradlew :wear:assembleDebug                 --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process
-          ./gradlew :mobile:assembleDebug               --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process
-
-      # 5) (Опционально) отдельные целевые шаги, если нужно
-      - name: Build Wear (debug) with verbose compiler logs
-        run: ./gradlew :wear:sensors:compileDebugKotlin :wear:assembleDebug --stacktrace --info --no-parallel --no-daemon --rerun-tasks --console=plain -Dkotlin.compiler.execution.strategy=in-process
-
-      - name: Build Mobile debug
-        run: ./gradlew :mobile:assembleDebug --stacktrace --no-daemon --console=plain
+          ./gradlew :wear:assembleDebug :mobile:assembleDebug --stacktrace --info --no-parallel -Dkotlin.compiler.execution.strategy=in-process --console=plain
