--- a/.github/workflows/android-full.yml
+++ b/.github/workflows/android-full.yml
@@ -33,14 +33,22 @@ jobs:
       - name: Ensure Gradle wrapper is executable
         run: chmod +x ./gradlew
 
+      - name: Detect available modules
+        id: detect
+        run: |
+          set -e
+          ./gradlew -q projects > projects.txt
+          echo "has_mobile=$(grep -E 'Project .:mobile($|:)' projects.txt >/dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
+          echo "has_wear=$(grep -E 'Project .:wear($|:)' projects.txt >/dev/null && echo true || echo false)" >> $GITHUB_OUTPUT
+
       - name: Build + Lint + Unit tests
         run: |
           set -e
-          ./gradlew \
-            :wear:assembleDebug \
-            # uncomment when :mobile exists
-            # :mobile:assembleDebug \
-            :wear:lint \
-            # :mobile:lint \
-            testDebugUnitTest \
-            --stacktrace --no-daemon
+          TASKS="testDebugUnitTest"
+          if [ "${{ steps.detect.outputs.has_wear }}" = "true" ]; then
+            TASKS=":wear:assembleDebug :wear:lint $TASKS"
+          fi
+          if [ "${{ steps.detect.outputs.has_mobile }}" = "true" ]; then
+            TASKS=":mobile:assembleDebug :mobile:lint $TASKS"
+          fi
+          ./gradlew $TASKS --stacktrace --no-daemon
