--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.parallel=false
 org.gradle.logging.stacktrace=all
 org.gradle.caching=true
 org.gradle.warning.mode=all
+org.gradle.java.installations.auto-download=true
 
 # Android/Kotlin
 android.useAndroidX=true
