--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -28,6 +28,20 @@
             android:name="com.google.android.wearable"
             android:required="false" />
 
+        <!-- S8.A: Data Layer v1 receiver (watch side) -->
+        <service
+        android:name="dev.pointtosky.wear.datalayer.v1.DlReceiverService"
+        android:exported="true">
+        <intent-filter>
+        <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+        <data android:scheme="wear" android:host="*" android:pathPrefix="/" />
+    </intent-filter>
+        <intent-filter>
+        <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+        <data android:scheme="wear" android:host="*" android:pathPrefix="/" />
+    </intent-filter>
+    </service>
+
         <activity
             android:name="dev.pointtosky.wear.MainActivity"
             android:exported="true"
