--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Соответствие permission ↔ feature, не блокируем установку на устройствах без камеры -->
+    <uses-feature
+    android:name="android.hardware.camera"
+    android:required="false" />
+
+    <!-- Минимально необходимая локация: COARSE достаточно для онбординга/функций приложения -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- Камера оставлена, т.к. используется в AR; если не используется — удалить -->
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".PointToSkyMobileApp"
-        android:allowBackup="true"
+        android:usesCleartextTraffic="false"
+        android:fullBackupContent="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -15,7 +23,6 @@
         <activity
             android:name="dev.pointtosky.mobile.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,23 +39,41 @@
             </intent-filter>
         </activity>
 
-        <!-- S8.A: Data Layer v1 receiver (phone side) -->
+        <!-- Data Layer v1 receiver (phone side). Сужаем pathPrefix до реальных пространств путей. -->
         <service
-        android:name="dev.pointtosky.mobile.datalayer.v1.DlReceiverService"
-        android:exported="true">
-        <intent-filter>
-        <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-        <data android:scheme="wear" android:host="*" android:pathPrefix="/" />
-    </intent-filter>
-        <intent-filter>
-        <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-        <data android:scheme="wear" android:host="*" android:pathPrefix="/" />
-    </intent-filter>
-    </service>
+            android:name="dev.pointtosky.mobile.datalayer.v1.DlReceiverService"
+            android:exported="true">
+            <!-- Один фильтр на каждый путь — убираем неоднозначность -->
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/card" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/aim" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/app" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/card" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/aim" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/app" />
+            </intent-filter>
+        </service>
 
+        <!-- GMS привязывается к этому сервису: для Android 12+ требуется exported=true -->
         <service
-            android:name="dev.pointtosky.mobile.datalayer.MobileBridgeListenerService"
-            android:exported="false">
+        android:name="dev.pointtosky.mobile.datalayer.MobileBridgeListenerService"
+        android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
