--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <uses-feature android:name="android.hardware.type.watch" />
+    <uses-feature
+        android:name="android.hardware.type.watch"
+        android:required="true" />
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
         android:required="false" />
@@ -32,7 +34,7 @@
         <!-- Data Layer v1 receiver (watch side). Сужаем pathPrefix. -->
         <service
             android:name="dev.pointtosky.wear.datalayer.v1.DlReceiverService"
-            android:exported="true">
+            android:exported="false">
             <!-- Один фильтр на каждый путь — убираем неоднозначность -->
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
@@ -72,10 +74,9 @@
             </intent-filter>
         </activity>
 
-        <!-- Для BIND_LISTENER обязателен exported=true -->
         <service
             android:name="dev.pointtosky.wear.datalayer.WearBridgeListenerService"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
@@ -84,15 +85,9 @@
         <!-- Tile entry Activity (opens the app; can route by action later) -->
         <activity
             android:name="dev.pointtosky.wear.tile.tonight.TileEntryActivity"
-            android:exported="true"
+            android:exported="false"
             android:taskAffinity=""
-            android:relinquishTaskIdentity="true">
-            <intent-filter>
-                <action android:name="dev.pointtosky.ACTION_OPEN_AIM"/>
-                <action android:name="dev.pointtosky.ACTION_OPEN_IDENTIFY"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
+            android:relinquishTaskIdentity="true" />
 
         <!-- Tonight tile service -->
         <service
