--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.logging.stacktrace=all
 org.gradle.caching=true
 org.gradle.warning.mode=all
 org.gradle.java.installations.auto-download=true
+org.gradle.java.installations.auto-detect=true
 
 # Android/Kotlin
 android.useAndroidX=true
