--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,13 @@
 root = true
 
-[*]
-charset = utf-8
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
-
 [*.{kt,kts}]
-ij_kotlin_allow_trailing_comma = true
-ij_kotlin_imports_layout = *,java.**,javax.**,kotlin.**,^
-max_line_length = 140
-ktlint_code_style = intellij_idea
-ktlint_function_naming_ignore_when_annotated_with = Composable
+indent_size = 4
+indent_style = space
+max_line_length = 120
+insert_final_newline = true
+end_of_line = lf
+
+ktlint_code_style = ktlint_official
+ij_kotlin_imports_layout = *,java.,javax.,kotlin.**,^
+ktlint_standard_no-wildcard-imports = disabled
+ktlint_standard_filename = disabled
