Fix AimControllerBasicTest timing and stabilize unit test tasks

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ kotlin.code.style=official
 kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 kotlin.compiler.execution.strategy=in-process
 kotlin.colors.enabled=true
+android.builder.sdkDownload=true
 
 # Build Scan ToS (если используешь --scan)
 gradle.termsOfService.agree=yes
