--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,11 @@
 root = true
 
 [*.{kt,kts}]
+ktlint_code_style = ktlint_official
 indent_size = 4
-indent_style = space
 max_line_length = 120
 insert_final_newline = true
-end_of_line = lf
+ij_kotlin_allow_trailing_comma = true
 
-ktlint_code_style = ktlint_official
-ij_kotlin_imports_layout = *,java.,javax.,kotlin.**,^
-ktlint_standard_no-wildcard-imports = disabled
-ktlint_standard_filename = disabled
+[*.gradle.kts]
+max_line_length = off
